src/test/julian/Parsing/SyntaxError/prog_2.jul
int x = 5;

void fun(){
	int y =;
}

fun();